Image for cable diagnostics added

--- a/ADIN1100-Eval/Views/CableDiagnosticsStatusADIN1100.xaml
+++ b/ADIN1100-Eval/Views/CableDiagnosticsStatusADIN1100.xaml
@@ -21,7 +21,7 @@
         </Style>
     </UserControl.Resources>
     <Border BorderThickness="0">
-        <StackPanel Orientation="Vertical">
+        <StackPanel Orientation="Vertical" Margin="10">
             <TextBlock Style="{StaticResource Title_H1}" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center">Device Status</TextBlock>
             <Grid>
                 <Grid.RowDefinitions>
@@ -32,20 +32,23 @@
                     <ColumnDefinition Width="120" MinWidth='70'/>
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                
+
                 <!--Row 0-->
                 <TextBlock Grid.Row="0" Grid.Column="0" 
                            Style="{StaticResource Title_H1}" HorizontalAlignment="Left">Fault:</TextBlock>
                 <TextBlock Grid.Row="0" Grid.Column="1" 
                            Style="{StaticResource Label}" Foreground="Red" Width="Auto" 
                            Text="Open/Short" HorizontalAlignment="Left"/>
-                
+
                 <!--Row 1-->
                 <TextBlock Grid.Row="1" Grid.Column="0" 
                            Style="{StaticResource Title_H1}" HorizontalAlignment="Left">Distance to Fault:</TextBlock>
                 <TextBlock Grid.Row="1" Grid.Column="1" 
                            Style="{StaticResource Label}" Width="Auto" 
                            Text="100.5" HorizontalAlignment="Left"/>
+            </Grid>
+            <Grid Margin="0 -50">
+                <local:CableDiagnosticImageControl/>
             </Grid>
         </StackPanel>
     </Border>
